# FF78Launcher

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.ps1  main-0.1.yml  main-0.2.0.yml  main-0.2.1.yml  main-0.3.0.yml
.vcpkg/ports/stackwalker/: portfile.cmake
.vcpkg/versions/: baseline.json
misc/: FF78Launcher.toml
src/: cfg.cpp  cfg.h  globals.h  launcher.cpp  launcher.h  plog.formatter.h  resource.h  utils.h  version.rc  winmain.cpp
